added header and hero

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
-.body {
-  margin: 0px;
-  padding: 0px;
-}
-
 :root {
   --primary-400: #080808;
   --primary-300: #0d0d0d;
   --primary-200: #737373;
-  --primary-100: #e7e7e7;
   --primary-100: #e7e7e7;
   --primary-50: #f7f7f7;
 
@@ -19,8 +13,14 @@
 
   --gradient-bg: rgb(1, 115, 115);
   --gradient: linear-gradient(
-    45deg,
+    25deg,
     rgba(1, 115, 115, 1) 0%,
     rgba(170, 217, 209, 1) 100%
   );
+}
+
+.body {
+  margin: 0px;
+  padding: 0px;
+  background-color: var(--primary-400);
 }
