--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,22 +1,29 @@
 @font-face {
-  font-family: "Be Vietnam Pro";
-  font-weight: 800;
-  src: url("./BeVietnamPro-ExtraBold.ttf");
-}
-@font-face {
-  font-family: "Be Vietnam Pro";
-  font-weight: 700;
-  src: url("./BeVietnamPro-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Be Vietnam Pro";
-  font-weight: 500;
-  src: url("./BeVietnamPro.ttf");
-}
-
-@font-face {
-  font-family: "Be Vietnam Pro";
+  font-family: "DM Sans";
   font-weight: 400;
-  src: url("./BeVietnamPro-Regular.ttf");
+  src: url("./DMSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "DM Sans";
+  font-weight: 500;
+  src: url("./DMSans-Medium.ttf");
+}
+
+@font-face {
+  font-family: "DM Sans";
+  font-weight: 600;
+  src: url("./DMSans-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: "DM Sans";
+  font-weight: 700;
+  src: url("./DMSans-Bold.ttf");
+}
+
+@font-face {
+  font-family: "DM Sans";
+  font-weight: 800;
+  src: url("./DMSans-Black.ttf");
 }
