--- a/src/components/PricingTile/PricingTile.css
+++ b/src/components/PricingTile/PricingTile.css
@@ -85,11 +85,17 @@
   align-items: center;
   justify-content: center;
   column-gap: 8px;
-  margin: 0px;
+  margin-top: auto;
   margin-bottom: 8px;
   padding: 0px;
   border: 1px solid var(--secondary-200);
   border-radius: 8px;
+  transition: all 0.25s;
+  cursor: pointer;
+}
+
+.pricing-cta:hover {
+  transform: scale(1.01);
 }
 
 .pricing-cta.dark {
@@ -114,4 +120,5 @@
 .pricing-tile__no-card {
   text-align: center;
   color: var(--primary-200);
+  height: 1rem;
 }
