--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 .text-reg {
   font-family: "DM Sans";
   font-size: 16px;
-  line-height: 120%;
+  line-height: 150%;
   margin: 0px;
 }
 
@@ -58,5 +58,14 @@
   font-size: 48px;
   line-height: 120%;
   letter-spacing: -3px;
+  margin: 0px;
+}
+
+.h3 {
+  font-family: "Be Vietnam Pro";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: -0.64px;
   margin: 0px;
 }
