--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@
   background-color: var(--primary-400);
 }
 
+.text-large {
+  font-family: "Be Vietnam Pro";
+  font-size: 20px;
+  line-height: 150%;
+  margin: 0px;
+}
+
 .text-reg {
   font-family: "DM Sans";
   font-size: 16px;
@@ -53,6 +60,14 @@
   margin: 0px;
 }
 
+.h1 {
+  font-family: "DM Sans";
+  font-size: 56px;
+  line-height: 106%;
+  letter-spacing: -3px;
+  margin: 0px;
+}
+
 .h2 {
   font-family: "DM Sans";
   font-size: 48px;
@@ -66,6 +81,15 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
+  letter-spacing: -0.64px;
+  margin: 0px;
+}
+
+.h5 {
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 140%;
   letter-spacing: -0.64px;
   margin: 0px;
 }
