--- a/src/components/AccordionItem/AccordionItem.css
+++ b/src/components/AccordionItem/AccordionItem.css
@@ -30,19 +30,13 @@
 .accordion-item__answer {
   max-height: 0;
   visibility: hidden;
-  background: #d5d5d5;
-
   opacity: 0;
-
   outline: none;
   background-color: var(--accent);
   border: 1px solid var(--secondary-200);
   border-radius: 16px;
-  transition:
-    max-height 0.4s ease-in-out,
-    visibility 0.2s ease-in-out,
-    opacity 0.2s ease-in-out,
-    margin 0.4s ease-in-out;
+  transition: max-height 0.4s ease-in-out, visibility 0.2s ease-in-out,
+    opacity 0.2s ease-in-out, margin 0.4s ease-in-out;
 }
 
 .accordion-item__answer.visible {
@@ -56,7 +50,6 @@
   display: flex;
   align-items: start;
   justify-content: space-between;
-
   max-width: calc(100% - 60px);
   margin-bottom: 15px;
   margin-top: 20px;
